# libtorch_cuda_starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.cu
python/: abs_cuda.cpp  abs_cuda_kernel.cu  main.py
